Modified DefaultTexParser to parse file by file