@@ -28,10 +28,10 @@ import org.jabref.gui.util.DirectoryDialogConfiguration;
 import org.jabref.gui.util.FileNodeViewModel;
 import org.jabref.gui.util.TaskExecutor;
 import org.jabref.logic.l10n.Localization;
-import org.jabref.logic.texparser.DefaultLatexParser;
 import org.jabref.logic.texparser.TexBibEntriesResolver;
 import org.jabref.logic.util.io.FileUtil;
 import org.jabref.model.database.BibDatabaseContext;
+import org.jabref.model.texparser.LatexParserResults;
 import org.jabref.model.util.FileUpdateMonitor;
 import org.jabref.preferences.PreferencesService;
 
@@ -170,7 +170,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
         List<Path> files = fileListPartition.get(false)
                                             .stream()
                                             .filter(path -> path.toString().endsWith(TEX_EXT))
-                                            .collect(Collectors.toList());
+                                            .toList();
         int fileCount = 0;
 
         for (Path subDirectory : subDirectories) {
@@ -185,7 +185,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
         parent.setFileCount(files.size() + fileCount);
         parent.getChildren().addAll(files.stream()
                                          .map(FileNodeViewModel::new)
-                                         .collect(Collectors.toList()));
+                                         .toList());
         return parent;
     }
 
@@ -196,7 +196,7 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
         List<Path> fileList = checkedFileList.stream()
                                              .map(item -> item.getValue().getPath())
                                              .filter(path -> path.toFile().isFile())
-                                             .collect(Collectors.toList());
+                                             .toList();
         if (fileList.isEmpty()) {
             LOGGER.warn("There are no valid files checked");
             return;
@@ -204,11 +204,10 @@ public class ParseLatexDialogViewModel extends AbstractViewModel {
 
         TexBibEntriesResolver entriesResolver = new TexBibEntriesResolver(
                 databaseContext.getDatabase(),
-                preferencesService.getLibraryPreferences(),
                 preferencesService.getImportFormatPreferences(),
                 fileMonitor);
 
-        BackgroundTask.wrap(() -> entriesResolver.resolve(new DefaultLatexParser().parse(fileList)))
+        BackgroundTask.wrap(() -> entriesResolver.resolve(new LatexParserResults(fileList)))
                       .onRunning(() -> searchInProgress.set(true))
                       .onFinished(() -> searchInProgress.set(false))
                       .onSuccess(result -> dialogService.showCustomDialogAndWait(
